--- a/html/experience.html
+++ b/html/experience.html
@@ -5,6 +5,11 @@
 <body>
 <h1>Experience</h1>
 <ul>
+	<li>Blockchain Researcher at <a href="https://dexon.org">DEXON foundation</a> and <a href="https://cobinhood.com">COBINHOOD</a></li>
+		<ul><li>- Research in blockchain and consensus algorithms</li>
+			<li>- One of the designers and authors of <a href="https://eprint.iacr.org/2018/1112">DEXON consensus algorithms</a></li>
+		</ul>
+	<br/>
 	<li>Senior in NTU CSIE</li>
 	<br/>
 	<li>Network administrator in NTU CSIE
