--- a/html/project.html
+++ b/html/project.html
@@ -3,6 +3,11 @@
 <head>
 </head>
 <body>
+	<!-- 
+		TODO: 
+		general consensus platform
+		cobinbot
+	-->
 	<h1>Project</h1>
 	<ul>
 	<li><a href="http://140.112.30.34:1234">Bomberman.io</a>
