--- a/html/footer.html
+++ b/html/footer.html
@@ -5,6 +5,10 @@
 <body>
 	<h1>Website updates and developer note</h1>
 	<ul>
+	<li>2019-01-20
+		<ul><li>- Update DEXON and COBINHOOD related experience.
+		</ul>
+	</li><br/>
 	<li>2016-08-17 
 		<ul><li>- Check name, email and message validation. Thanks to Kevin Hwa.</li>
 			<li>- Now I can check availability of my mail sender by clicking 
