--- a/html/skill.html
+++ b/html/skill.html
@@ -16,7 +16,12 @@
 		</div>
 	</div>
 	<div class="outProgress">
-		<div class="inProgress" id="java" style="width: 90%">
+		<div class="inProgress" id="js" style="width: 90%">
+			<span>Javascript / node.js</span>
+		</div>
+	</div>
+	<div class="outProgress">
+		<div class="inProgress" id="java" style="width: 80%">
 			<span>Java</span>
 		</div>
 	</div>
@@ -26,19 +31,16 @@
 		</div>
 	</div>
 	<div class="outProgress">
-		<div class="inProgress" id="html" style="width: 75%; background-color: #FFEB3B">
+		<div class="inProgress" id="html" style="width: 65%; background-color: #FF9800">
 			<span>HTML / CSS</span>
 		</div>
 	</div>
-	<div class="outProgress">
-		<div class="inProgress" id="js" style="width: 65%; background-color: #FF9800">
-			<span>Javascript / node.js</span>
-		</div>
-	</div>
+	
 </div>
 <div class="subContent" id="otherSkill">
 	<h3>Other skill</h3>
 	<ul>
+	<li>Blockchain and consensus algorithm</li>
 	<li>Server / TCP network programming</li>
 	<li>Object-oriented programming</li>
 	<li>Git / Version control</li>
