turns out it is difficult to get group public key from governance contract

--- a/projects/dexon-rng/index.html
+++ b/projects/dexon-rng/index.html
@@ -73,11 +73,12 @@
             where <img src="https://latex.codecogs.com/svg.latex?e()" border="0" />
             is the pairing function in BLS and 
             <img src="https://latex.codecogs.com/svg.latex?pk" border="0" />
-            is the group public key. More details can be found at
+            is the group public key, which can be calculated from each validator's 
+            public key share. More details can be found at
             <a href="https://github.com/dexon-foundation/wiki/wiki/DKG%EF%BC%8BTSIG-Protocol">DEXON wiki</a>.
-            <h5>Latest validator public keys:</h5>
-            <!-- TODO: table public key + has complain? -->
-
+            <h5>Get validator public keys</h5>
+            <!-- TODO: input block height output public key + has complain? -->
+            <p>Not available at the moment.</p>
         </p>
         <h3>How to use it in your application?</h3>
         <p>
