dexon link purple

--- a/projects/dexon-rng/index.html
+++ b/projects/dexon-rng/index.html
@@ -75,7 +75,7 @@
             <img src="https://latex.codecogs.com/svg.latex?pk" border="0" />
             is the group public key, which can be calculated from each validator's 
             public key share. More details can be found at
-            <a href="https://github.com/dexon-foundation/wiki/wiki/DKG%EF%BC%8BTSIG-Protocol">DEXON wiki</a>.
+            <a style="color: #954A97" href="https://github.com/dexon-foundation/wiki/wiki/DKG%EF%BC%8BTSIG-Protocol">DEXON wiki</a>.
             <h5>Get validator public keys</h5>
             <!-- TODO: input block height output public key + has complain? -->
             <p>Not available at the moment.</p>
