font awesome update; node.js to NodeJS

--- a/html/contact.html
+++ b/html/contact.html
@@ -11,7 +11,7 @@
 	<br/>
 	<textarea id="content" placeholder="Anything you want to say..."></textarea>
 	<button type="button" onclick="send()">
-		<i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+		<i class="far fa-paper-plane" aria-hidden="true"></i>
 	</button>
 	<div id="notification"></div>
 </body>
