--- a/html/skill.html
+++ b/html/skill.html
@@ -17,7 +17,7 @@
 	</div>
 	<div class="outProgress">
 		<div class="inProgress" id="js" style="width: 90%">
-			<span>Javascript / node.js</span>
+			<span>Javascript / NodeJS</span>
 		</div>
 	</div>
 	<div class="outProgress">
