--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Nicky's Website</title>
 <meta charset="UTF-8"> 
-<link rel="stylesheet" type="text/css" href="./css/font-awesome-4.6.3/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="./css/navBar.css" />
 <link rel="stylesheet" type="text/css" href="./css/content.css" />
 <link rel="stylesheet" type="text/css" href="./css/home.css" />
