add contact icon group

--- a/html/home.html
+++ b/html/home.html
@@ -3,7 +3,7 @@
 <head>
 	
 <style>
-#typeDisplayer{
+#typeDisplayer {
 	/*border: 3px solid;*/
 	font-size: 35px;
 }
@@ -12,13 +12,16 @@
 <body>
 <h1 class="giant">Hi, I'm Nicky Chao!</h1>
 <div id="typeDisplayer"></div>
-<!--
-<div class="card">
-	<img src="./pic/GGme.jpg" alt="" style="width: 100%" />
-	<div class="container">
-		<h3></h3>
-	</div>
+<div id="contact-icons">
+	<button onclick="window.location.href='https://github.com/CheshireCatNick'" type="button" id="github">
+		<i class="fab fa-github" aria-hidden="true"></i>
+	</button>
+	<button onclick="window.location.href='https://www.linkedin.com/in/nicholas-chao-45108686/'" type="button" id="linked-in">
+		<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+	</button>
+	<button onclick="window.location.href='mailto:cheshirecatnick@gmail.com'" type="button" id="mail">
+		<i class="fas fa-envelope" aria-hidden="true"></i>
+	</button>
 </div>
--->
 </body>
 </html>
