--- a/html/project.html
+++ b/html/project.html
@@ -3,25 +3,37 @@
 <head>
 </head>
 <body>
-	<!-- 
-		TODO: 
-		general consensus platform
-		cobinbot
-		DEXON RNG
-	-->
 	<h1>Project</h1>
 	<ul>
+	<li>General Consensus Platform
+		<ul><li>- A simulation platform for various consensus algorithm</li>
+			<li>- NodeJS</li>
+			<li>- <a href="https://github.com/dexon-foundation/general-consensus-platform"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+		</ul>
+	</li>
+	<li>cobinbot
+		<ul><li>- A bot for trading and campaign on COBINHOOD exchange</li>
+			<li>- NodeJS</li>
+			<li>- <a href="https://github.com/CheshireCatNick/cobinbot"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+		</ul>
+	</li>
+	<li><a href="./projects/dexon-rng/">DEXON RNG</a>
+		<ul><li>- Verifiable random number generator using DEXON blockchain</li>
+			<li>- HTML, javascript, bootstrap, web3.js</li>
+			<li>- <a href="https://github.com/CheshireCatNick/cheshirecatnick.github.io/tree/master/projects/dexon-rng"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+		</ul>
+	</li>
 	<li><a href="http://140.112.30.34:1234">Bomberman.io</a>
 		<ul><li>- Online bomberman game</li>
-			<li>- HTML, javascript, CSS, canvas, node.js</li>
-			<li>- <a href="https://github.com/unchartedcake/bomberman.io"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+			<li>- HTML, javascript, CSS, canvas, NodeJS</li>
+			<li>- <a href="https://github.com/unchartedcake/bomberman.io"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li><br/>
 
 	<li>EasyChat
 		<ul><li>- GUI chatroom that can send file, img etc.</li>
 			<li>- Java, swing</li>
-			<li>- <a href="https://github.com/st945306/easyChat"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+			<li>- <a href="https://github.com/st945306/easyChat"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li><br/>
 
@@ -29,7 +41,7 @@
 		<ul><li>- Vocabulary builder that can use user-provided vocabulary</li>
 			<li>- HTML, CSS, javascript, json, java</li>
 			<li>- 	<a href="https://github.com/st945306/myWebsite/tree/master/vocab">
-						<i class="fa fa-github" aria-hidden="true"></i>
+						<i class="fab fa-github" aria-hidden="true"></i>
 					</a>
 			</li>
 		</ul>
@@ -38,14 +50,14 @@
 	<li>Auralizer
 		<ul><li>- Find appropriate music for your blog on YouTube</li>
 			<li>- C++, python</li>
-			<li>- <a href="https://github.com/Eug83/IR-final"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+			<li>- <a href="https://github.com/Eug83/IR-final"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li><br/>
 	
 	<li>Lunch decider
 		<ul><li>- Smart app that can decide a proper restaurant for your next meal</li>
 			<li>- Android, java, XML</li>
-			<li>- <a href="https://github.com/st945306/Lunch-Decider"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+			<li>- <a href="https://github.com/st945306/Lunch-Decider"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li><br/>
 	
@@ -59,7 +71,7 @@
 		<ul><li>- Detect malicious switch in a software-defined network</li>
 			<li>- Python, RYU</li>
 			<li>- 	<a href="https://github.com/st945306/SDN-compromised-switch-detector">
-						<i class="fa fa-github" aria-hidden="true"></i>
+						<i class="fab fa-github" aria-hidden="true"></i>
 					</a>
 			</li>
 		</ul>
@@ -74,14 +86,14 @@
 	<li><a href="https://leetcode.com/">LeetCode</a> write-up
 		<ul><li>- Try to solve every problem on Leetcode</li>
 			<li>- C, C++</li>
-			<li>- <a href="https://github.com/CheshireCatNick/leetcode"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+			<li>- <a href="https://github.com/CheshireCatNick/leetcode"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li><br/>
 	
 	<li><a href="http://www.csie.ntu.edu.tw/~b02902055/myWebsite/">My website (old)</a>
 		<ul><li>- Last version of my personal website</li>
 			<li>- HTML, CSS, javascript, bootstrap</li>
-			<li>- <a href="https://github.com/st945306/myWebsite"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+			<li>- <a href="https://github.com/st945306/myWebsite"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li><br/>
 	
