--- a/html/footer.html
+++ b/html/footer.html
@@ -5,6 +5,11 @@
 <body>
 	<h1>Website updates and developer note</h1>
 	<ul>
+	<li>2019-02-04
+		<ul><li>- Update projects: General Consensus Platform, Cobinbot and DEXON RNG.</li>
+			<li>- Add contact icons.</li>
+		</ul>
+	</li>
 	<li>2019-01-20
 		<ul><li>- Update DEXON and COBINHOOD related experience.
 		</ul>
