--- a/html/project.html
+++ b/html/project.html
@@ -11,7 +11,7 @@
 			<li>- <a href="https://github.com/dexon-foundation/general-consensus-platform"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li>
-	<li>cobinbot
+	<li>Cobinbot
 		<ul><li>- A bot for trading and campaign on COBINHOOD exchange</li>
 			<li>- NodeJS</li>
 			<li>- <a href="https://github.com/CheshireCatNick/cobinbot"><i class="fab fa-github" aria-hidden="true"></i></a></li>
