update mainnet rpc

--- a/projects/dexon-rng/index.html
+++ b/projects/dexon-rng/index.html
@@ -92,7 +92,7 @@
 <script>
 
     const web3 = new Web3();
-    web3.setProvider(new web3.providers.HttpProvider('https://api-testnet.dexscan.org/v1/network/rpc'));
+    web3.setProvider(new web3.providers.HttpProvider('https://mainnet-rpc.dexon.org'));
     window.onload = function() {
         window.allBlocks = [];
     };
