--- a/html/project.html
+++ b/html/project.html
@@ -7,13 +7,13 @@
 	<ul>
 	<li>General Consensus Platform
 		<ul><li>- A simulation platform for various consensus algorithm</li>
-			<li>- NodeJS</li>
-			<li>- <a href="https://github.com/dexon-foundation/general-consensus-platform"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+			<li>- Node.js</li>
+			<li>- <a href="https://github.com/CheshireCatNick/consensus-simulator"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li>
 	<li>Cobinbot
 		<ul><li>- A bot for trading and campaign on COBINHOOD exchange</li>
-			<li>- NodeJS</li>
+			<li>- Node.js</li>
 			<li>- <a href="https://github.com/CheshireCatNick/cobinbot"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li>
@@ -25,7 +25,7 @@
 	</li>
 	<li><a href="http://140.112.30.34:1234">Bomberman.io</a>
 		<ul><li>- Online bomberman game</li>
-			<li>- HTML, javascript, CSS, canvas, NodeJS</li>
+			<li>- HTML, javascript, CSS, canvas, Node.js</li>
 			<li>- <a href="https://github.com/unchartedcake/bomberman.io"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
 	</li><br/>
