--- a/html/experience.html
+++ b/html/experience.html
@@ -8,10 +8,10 @@
 	<li>Blockchain Researcher at <a href="https://dexon.org">DEXON foundation</a> and <a href="https://cobinhood.com">COBINHOOD</a></li>
 		<ul><li>- Research in blockchain and consensus algorithms</li>
 			<li>- One of the designers and authors of DEXON consensus algorithms</li>
-			<ul>- Papers:
+			<li><ul>- Papers:
 				<li><a href="https://arxiv.org/abs/1811.07525">DEXON: A Highly Scalable, Decentralized DAG-Based Consensus Algorithm</a></li>
 				<li><a href="https://arxiv.org/abs/1907.03437">Fair Byzantine Agreements for Blockchains</a></li>
-			</ul>
+			</ul></li>
 		</ul>
 	<br/>
 	<li>Senior in NTU CSIE</li>
