--- a/html/experience.html
+++ b/html/experience.html
@@ -7,8 +7,8 @@
 <ul>
 	<li>Blockchain Researcher at <a href="https://dexon.org">DEXON foundation</a> and <a href="https://cobinhood.com">COBINHOOD</a></li>
 		<ul><li>- Research in blockchain and consensus algorithms</li>
-			<li>- One of the designers and authors of DEXON consensus algorithms</li>
-			<li><ul>- Papers:
+			<li>- One of the designers and authors of DEXON consensus algorithms:
+			<ul>
 				<li><a href="https://arxiv.org/abs/1811.07525">DEXON: A Highly Scalable, Decentralized DAG-Based Consensus Algorithm</a></li>
 				<li><a href="https://arxiv.org/abs/1907.03437">Fair Byzantine Agreements for Blockchains</a></li>
 			</ul></li>
