--- a/html/experience.html
+++ b/html/experience.html
@@ -9,8 +9,8 @@
 		<ul><li>- Research in blockchain and consensus algorithms</li>
 			<li>- One of the designers and authors of DEXON consensus algorithms:
 			<ul>
-				<li><a href="https://arxiv.org/abs/1811.07525">DEXON: A Highly Scalable, Decentralized DAG-Based Consensus Algorithm</a></li>
-				<li><a href="https://arxiv.org/abs/1907.03437">Fair Byzantine Agreements for Blockchains</a></li>
+				<li><a href="https://arxiv.org/abs/1811.07525">- <i>DEXON: A Highly Scalable, Decentralized DAG-Based Consensus Algorithm</i></a></li>
+				<li><a href="https://arxiv.org/abs/1907.03437">- <i>Fair Byzantine Agreements for Blockchains</i></a></li>
 			</ul></li>
 		</ul>
 	<br/>
