--- a/html/experience.html
+++ b/html/experience.html
@@ -5,7 +5,7 @@
 <body>
 <h1>Experience</h1>
 <ul>
-	<li>Blockchain Researcher at <a href="https://dexon.org">DEXON foundation</a> and <a href="https://cobinhood.com">COBINHOOD</a></li>
+	<li>Blockchain Researcher at <a href="https://dexon.org">DEXON Foundation</a> and <a href="https://cobinhood.com">COBINHOOD</a></li>
 		<ul><li>- Research in blockchain and consensus algorithms</li>
 			<li>- One of the designers and authors of DEXON consensus algorithms:
 			<ul>
@@ -14,21 +14,22 @@
 			</ul></li>
 		</ul>
 	<br/>
-	<li>Senior in NTU CSIE</li>
+	<li>Bachelor and Master Degree in NTU CSIE</li>
+	<li>Master Thesis: not published yet</li>
 	<br/>
-	<li>Network administrator in NTU CSIE
+	<li>Network Administrator in NTU CSIE
 		<ul><li>- Familiar with firewall such as Fortigate, pfSense</li>
 			<li>- Familiar with Linux network tools</li>
 			<li>- Familiar with network structure and device</li>
 		</ul>
 	</li>
 	<br/>
-	<li>Teaching assistant in network course
+	<li>Teaching Assistant in Network Course
 		<ul><li>- Teach and train students for network administration</li>
 		</ul>
 	</li>
 	<br/>
-	<li>Research in network security lab
+	<li>Research in Network Security Lab
 		<ul><li>- Research in software-defined network</li>
 			<li>- Publish and present a workshop 
 			<a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7502486&amp;searchWithin%3DSDN%26filter%3DAND%28p_IS_Number%3A7502392%29%26pageNumber%3D3">
@@ -38,7 +39,7 @@
 		</ul>
 	</li>
 	<br/>
-	<li>Team member of <a href="https://sites.google.com/site/nturobopalspl/">NTU RoboPAL</a>
+	<li>Team Member of <a href="https://sites.google.com/site/nturobopalspl/">NTU RoboPAL</a>
 		<ul><li>- Rank top 4 in outdoor competition and top 12 in indoor competition in 
 					<a href="http://www.robocup2016.org/en/">RoboCup 2016</a></li>
 			<li>- Study robot balancing and kicking</li>
