--- a/html/experience.html
+++ b/html/experience.html
@@ -14,8 +14,11 @@
 			</ul></li>
 		</ul>
 	<br/>
-	<li>Bachelor and Master Degree in NTU CSIE</li>
-	<li>Master Thesis: not published yet</li>
+	<li>Bachelor and Master Degree in NTU CSIE
+		<ul>
+			<li>- Master Thesis: not published yet</li>
+		</ul>
+	</li>
 	<br/>
 	<li>Network Administrator in NTU CSIE
 		<ul><li>- Familiar with firewall such as Fortigate, pfSense</li>
