fix mail sender and add to github

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 
 <script src="./js/include.js"></script>
 <script src="./js/animation.js"></script>
-<script src="./js/mailClient.js"></script>
+<script src="./js/mail-client.js"></script>
 <script src="./js/socket.io-1.4.5.js"></script>
-<script src="./js/jquery-3.1.0.min.js"></script>
-<script src="./js/typed.js/js/typed.js"></script>
 
 <style>
 
