--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="./js/include.js"></script>
 <script src="./js/animation.js"></script>
 <script src="./js/mail-client.js"></script>
-<script src="./js/socket.io-1.4.5.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 
 <style>
 
