--- a/html/home.html
+++ b/html/home.html
@@ -13,6 +13,9 @@
 <h1 class="giant">Hi, I'm Nicky Chao!</h1>
 <div id="typeDisplayer"></div>
 <div id="contact-icons">
+	<button onclick="window.location.href='./Tzu-Wei-Chao-CV.pdf'" type="button" id="cv">
+		<i class="fas fa-file" aria-hidden="true"></i>
+	</button>
 	<button onclick="window.location.href='https://github.com/CheshireCatNick'" type="button" id="github">
 		<i class="fab fa-github" aria-hidden="true"></i>
 	</button>
