--- a/html/project.html
+++ b/html/project.html
@@ -5,24 +5,41 @@
 <body>
 	<h1>Project</h1>
 	<ul>
-	<li>General Consensus Platform
-		<ul><li>- A simulation platform for various consensus algorithm</li>
+	<li>Consensus Simulator
+		<ul><li>- A simulation platform for various consensus algorithms</li>
 			<li>- Node.js</li>
 			<li>- <a href="https://github.com/CheshireCatNick/consensus-simulator"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
-	</li>
+	</li></br>
+
 	<li>Cobinbot
 		<ul><li>- A bot for trading and campaign on COBINHOOD exchange</li>
 			<li>- Node.js</li>
 			<li>- <a href="https://github.com/CheshireCatNick/cobinbot"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
-	</li>
+	</li></br>
+
 	<li><a href="./projects/dexon-rng/">DEXON RNG</a>
 		<ul><li>- Verifiable random number generator using DEXON blockchain</li>
 			<li>- HTML, javascript, bootstrap, web3.js</li>
 			<li>- <a href="https://github.com/CheshireCatNick/cheshirecatnick.github.io/tree/master/projects/dexon-rng"><i class="fab fa-github" aria-hidden="true"></i></a></li>
 		</ul>
-	</li>
+	</li></br>
+
+	<li>Grid Master
+		<ul><li>- A backtesting tool for finding the best parameters for grid trading on <a href="https://www.pionex.com/">Pionex exchange</a></li>
+			<li>- Node.js</li>
+			<li>- <a href="https://github.com/CheshireCatNick/grid-master"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+		</ul>
+	</li></br>
+
+	<li>Code Exercise
+		<ul><li>- Solving problems on various online judges and contests.</li>
+			<li>- C, C++, javascript</li>
+			<li>- <a href="https://github.com/CheshireCatNick/code-exercise"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+		</ul>
+	</li><br/>
+
 	<li><a href="http://140.112.30.34:1234">Bomberman.io</a>
 		<ul><li>- Online bomberman game</li>
 			<li>- HTML, javascript, CSS, canvas, Node.js</li>
@@ -82,14 +99,7 @@
 			<li>- Arduino, python</li>
 		</ul>
 	</li><br/>
-	
-	<li><a href="https://leetcode.com/">LeetCode</a> write-up
-		<ul><li>- Try to solve every problem on Leetcode</li>
-			<li>- C, C++</li>
-			<li>- <a href="https://github.com/CheshireCatNick/leetcode"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li><br/>
-	
+		
 	<li><a href="http://www.csie.ntu.edu.tw/~b02902055/myWebsite/">My website (old)</a>
 		<ul><li>- Last version of my personal website</li>
 			<li>- HTML, CSS, javascript, bootstrap</li>
