--- a/html/skill.html
+++ b/html/skill.html
@@ -7,9 +7,9 @@
 </style>
 </head>
 <body>
-<h1>Skill</h1>
+<h1>Technical Strengths</h1>
 <div id="programmingLanguage">
-	<h3>Programming language</h3>
+	<h3>Programming Languages</h3>
 	<div class="outProgress">
 		<div class="inProgress" id="C" style="width: 90%">
 			<span>C / C++</span>
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<div class="outProgress">
-		<div class="inProgress" id="java" style="width: 80%">
+		<div class="inProgress" id="java" style="width: 80%; background-color: #FFEB3B">
 			<span>Java</span>
 		</div>
 	</div>
@@ -38,15 +38,14 @@
 	
 </div>
 <div class="subContent" id="otherSkill">
-	<h3>Other skill</h3>
+	<h3>Other Strenghts</h3>
 	<ul>
-	<li>Blockchain and consensus algorithm</li>
-	<li>Server / TCP network programming</li>
-	<li>Object-oriented programming</li>
-	<li>Git / Version control</li>
+	<li>Blockchain and Consensus Algorithm</li>
+	<li>Network Security</li>
+	<li>Cryptography</li>
+	<li>Software-Defined Network</li>
+	<li>Git / Version Control</li>
 	<li>Linux / Shell</li>
-	<li>Network management / Network security</li>
-	<li>Software-defined network</li>
 	</ul>
 </div>
 </body>
