--- a/html/footer.html
+++ b/html/footer.html
@@ -6,6 +6,12 @@
 	<h1>Website updates and developer note</h1>
 	<ul>
 	<li>2019-02-04
+		<ul><li>- Upgrade mail server to https and move it to Linode.</li>
+			<li>- Update experience, technical strengths and project (Grid Master).</li>
+			<li>- Add <a href="./Tzu_Wei_Chao_CV.pdf">CV</a> and CV icons.</li>
+		</ul>
+	</li>
+	<li>2019-02-04
 		<ul><li>- Update projects: General Consensus Platform, Cobinbot and DEXON RNG.</li>
 			<li>- Add contact icons.</li>
 		</ul>
