--- a/html/home.html
+++ b/html/home.html
@@ -13,7 +13,7 @@
 <h1 class="giant">Hi, I'm Nicky Chao!</h1>
 <div id="typeDisplayer"></div>
 <div id="contact-icons">
-	<button onclick="window.location.href='./Tzu-Wei-Chao-CV.pdf'" type="button" id="cv">
+	<button onclick="window.location.href='./Tzu_Wei_Chao_CV.pdf'" type="button" id="cv">
 		<i class="fas fa-file" aria-hidden="true"></i>
 	</button>
 	<button onclick="window.location.href='https://github.com/CheshireCatNick'" type="button" id="github">
