--- a/html/home.html
+++ b/html/home.html
@@ -14,7 +14,9 @@
 <div id="typeDisplayer"></div>
 <div id="contact-icons">
 	<button onclick="window.location.href='./Tzu_Wei_Chao_CV.pdf'" type="button" id="cv">
-		<i class="fas fa-file" aria-hidden="true"></i>
+		<i class="fas fa-address-card" aria-hidden="true">
+			<span style="padding-left: 10px; font-family: Crimson Text; font-size: 30px">My Resume</span>
+		</i>
 	</button>
 	<button onclick="window.location.href='https://github.com/CheshireCatNick'" type="button" id="github">
 		<i class="fab fa-github" aria-hidden="true"></i>
