--- a/html/navBar.html
+++ b/html/navBar.html
@@ -5,6 +5,11 @@
 <body>
 	<ul class="navBar">
 	<li style="float: left"><a href="#home">Home</a></li>
+	<!-- Rounded switch -->
+	<li><a><label class="switch">
+		<input type="checkbox">
+		<span class="slider round"></span>
+	</label></a></li>
 	<li><a href="#contact">Contact</a></li>
 	<li><a href="#project">Project</a></li>
 	<li><a href="#experience">Experience</a></li>
