--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <link rel="stylesheet" type="text/css" href="./css/project.css" />
 <link rel="stylesheet" type="text/css" href="./css/contact.css" />
 <link rel="stylesheet" type="text/css" href="./css/footer.css" />
-
+<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Muli|Noto+Serif&display=swap" rel="stylesheet">
 <script src="./js/include.js"></script>
 <script src="./js/animation.js"></script>
 <script src="./js/mail-client.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 
 <style>
-
+body {
+    background-color: #555;
+}
 </style>
 </head>
 
