finish dark mode and light mode

--- a/html/navBar.html
+++ b/html/navBar.html
@@ -3,13 +3,13 @@
 <head>
 </head>
 <body>
-	<ul class="navBar">
+	<ul class="navBar" id="navBar">
 	<li style="float: left"><a href="#home">Home</a></li>
 	<!-- Rounded switch -->
-	<li><a><label class="switch">
-		<input type="checkbox">
+	<li><label class="switch">
+		<input type="checkbox" id="dark-mode">
 		<span class="slider round"></span>
-	</label></a></li>
+	</label></li>
 	<li><a href="#contact">Contact</a></li>
 	<li><a href="#project">Project</a></li>
 	<li><a href="#experience">Experience</a></li>
