--- a/html/footer.html
+++ b/html/footer.html
@@ -5,6 +5,11 @@
 <body>
 	<h1>Website updates and developer note</h1>
 	<ul>
+	<li>2019-02-20
+		<ul><li>- Seperate resume button from contact buttons.</li>
+			<li>- Add a switch to support dark mode and light mode.</li>
+		</ul>
+	</li>
 	<li>2019-02-04
 		<ul><li>- Upgrade mail server to https and move it to Linode.</li>
 			<li>- Update experience, technical strengths and project (Grid Master).</li>
