--- a/html/home.html
+++ b/html/home.html
@@ -3,21 +3,19 @@
 <head>
 	
 <style>
-#typeDisplayer {
-	/*border: 3px solid;*/
-	font-size: 35px;
-}
 </style>
 </head>
 <body>
 <h1 class="giant">Hi, I'm Nicky Chao!</h1>
 <div id="typeDisplayer"></div>
-<div id="contact-icons">
+<div id="resume">
 	<button onclick="window.location.href='./Tzu_Wei_Chao_CV.pdf'" type="button" id="cv">
 		<i class="fas fa-address-card" aria-hidden="true">
 			<span style="padding-left: 10px; font-family: Crimson Text; font-size: 30px">My Resume</span>
 		</i>
 	</button>
+</div>
+<div id="contact-icons">
 	<button onclick="window.location.href='https://github.com/CheshireCatNick'" type="button" id="github">
 		<i class="fab fa-github" aria-hidden="true"></i>
 	</button>
