update crypto flash

--- a/html/project.html
+++ b/html/project.html
@@ -12,6 +12,13 @@
 		</ul>
 	</li></br>
 
+	<li>Crypto Flash
+		<ul><li>A trading bot for cryptocurrency which aims to be fast.</li>
+			<li>- Go</li>
+			<li>- <a href="https://github.com/CheshireCatNick/crypto-flash"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+		</ul>
+	</li></br>
+
 	<li>Cobinbot
 		<ul><li>- A bot for trading and campaign on COBINHOOD exchange</li>
 			<li>- Node.js</li>
