--- a/html/skill.html
+++ b/html/skill.html
@@ -31,6 +31,11 @@
 		</div>
 	</div>
 	<div class="outProgress">
+		<div class="inProgress" id="go" style="width: 80%; background-color: #FFEB3B">
+			<span>Go</span>
+		</div>
+	</div>
+	<div class="outProgress">
 		<div class="inProgress" id="html" style="width: 65%; background-color: #FF9800">
 			<span>HTML / CSS</span>
 		</div>
