--- a/html/experience.html
+++ b/html/experience.html
@@ -10,6 +10,7 @@
 			<ul>
 				<li><a href="https://arxiv.org/abs/1811.07525">- <i>DEXON: A Highly Scalable, Decentralized DAG-Based Consensus Algorithm</i></a></li>
 				<li><a href="https://arxiv.org/abs/1907.03437">- <i>Fair Byzantine Agreements for Blockchains</i></a></li>
+				<li><a href="https://ieeexplore.ieee.org/document/9062491">- <i>Fair Byzantine Agreements for Blockchains (IEEE Access)</i></a></li>
 			</ul></li>
 			<li>Develop a consensus simulator for testing/verifying the security of consensus algorithms</li>
 		</ul>
