update python skill

--- a/html/skill.html
+++ b/html/skill.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<style>
+	<style>
 
 
-</style>
+	</style>
 </head>
+
 <body>
-<h1>Technical Strengths</h1>
-<div id="programmingLanguage">
-	<h3>Programming Languages</h3>
-	<div class="outProgress">
-		<div class="inProgress" id="C" style="width: 90%">
-			<span>C / C++</span>
+	<h1>Technical Strengths</h1>
+	<div id="programmingLanguage">
+		<h3>Programming Languages</h3>
+		<div class="outProgress">
+			<div class="inProgress" id="C" style="width: 90%">
+				<span>C / C++</span>
+			</div>
 		</div>
-	</div>
-	<div class="outProgress">
-		<div class="inProgress" id="js" style="width: 90%">
-			<span>Javascript / Node.js</span>
+		<div class="outProgress">
+			<div class="inProgress" id="python" style="width: 90%">
+				<span>Python</span>
+			</div>
 		</div>
-	</div>
-	<div class="outProgress">
-		<div class="inProgress" id="java" style="width: 80%; background-color: #FFEB3B">
-			<span>Java</span>
+		<div class="outProgress">
+			<div class="inProgress" id="js" style="width: 90%">
+				<span>Javascript / Node.js</span>
+			</div>
 		</div>
-	</div>
-	<div class="outProgress">
-		<div class="inProgress" id="python" style="width: 80%; background-color: #FFEB3B">
-			<span>Python</span>
+		<div class="outProgress">
+			<div class="inProgress" id="java" style="width: 80%; background-color: #FFEB3B">
+				<span>Java</span>
+			</div>
 		</div>
-	</div>
-	<div class="outProgress">
-		<div class="inProgress" id="go" style="width: 80%; background-color: #FFEB3B">
-			<span>Go</span>
+		<div class="outProgress">
+			<div class="inProgress" id="go" style="width: 80%; background-color: #FFEB3B">
+				<span>Go</span>
+			</div>
 		</div>
-	</div>
-	<div class="outProgress">
-		<div class="inProgress" id="html" style="width: 65%; background-color: #FF9800">
-			<span>HTML / CSS</span>
+		<div class="outProgress">
+			<div class="inProgress" id="html" style="width: 65%; background-color: #FF9800">
+				<span>HTML / CSS</span>
+			</div>
 		</div>
+
 	</div>
-	
-</div>
-<div class="subContent" id="otherSkill">
-	<h3>Other Strenghts</h3>
-	<ul>
-	<li>Blockchain and Consensus Algorithm</li>
-	<li>Network Security</li>
-	<li>Cryptography</li>
-	<li>Software-Defined Network</li>
-	<li>Git / Version Control</li>
-	<li>Linux / Shell</li>
-	</ul>
-</div>
+	<div class="subContent" id="otherSkill">
+		<h3>Other Strenghts</h3>
+		<ul>
+			<li>Blockchain and Consensus Algorithm</li>
+			<li>Network Security</li>
+			<li>Cryptography</li>
+			<li>Software-Defined Network</li>
+			<li>Git / Version Control</li>
+			<li>Linux / Shell</li>
+		</ul>
+	</div>
 </body>
+
 </html>
