--- a/html/skill.html
+++ b/html/skill.html
@@ -47,6 +47,7 @@
 	<div class="subContent" id="otherSkill">
 		<h3>Other Strenghts</h3>
 		<ul>
+			<li>Relational DB / ORM</li>
 			<li>Blockchain and Consensus Algorithm</li>
 			<li>Network Security</li>
 			<li>Cryptography</li>
