--- a/html/project.html
+++ b/html/project.html
@@ -1,119 +1,150 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 </head>
+
 <body>
 	<h1>Project</h1>
 	<ul>
-	<li>Consensus Simulator
-		<ul><li>- A simulation platform for various consensus algorithms</li>
-			<li>- Node.js</li>
-			<li>- <a href="https://github.com/CheshireCatNick/consensus-simulator"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li></br>
+		<li>Consensus Simulator
+			<ul>
+				<li>- A simulation platform for various consensus algorithms</li>
+				<li>- Node.js</li>
+				<li>- <a href="https://github.com/CheshireCatNick/consensus-simulator"><i class="fab fa-github"
+							aria-hidden="true"></i></a></li>
+			</ul>
+		</li></br>
 
-	<li>Crypto Flash
-		<ul><li>A trading bot for cryptocurrency which aims to be fast.</li>
-			<li>- Go</li>
-			<li>- <a href="https://github.com/CheshireCatNick/crypto-flash"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li></br>
+		<li>Crypto Flash (turned to private repo because it is too profitable)
+			<ul>
+				<li>A trading bot for cryptocurrency which aims to be fast.</li>
+				<li>- Go</li>
+				<li>- <a href="https://github.com/CheshireCatNick/crypto-flash"><i class="fab fa-github"
+							aria-hidden="true"></i></a></li>
+			</ul>
+		</li></br>
 
-	<li>Cobinbot
-		<ul><li>- A bot for trading and campaign on COBINHOOD exchange</li>
-			<li>- Node.js</li>
-			<li>- <a href="https://github.com/CheshireCatNick/cobinbot"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li></br>
+		<li>Cobinbot
+			<ul>
+				<li>- A bot for trading and campaign on COBINHOOD exchange</li>
+				<li>- Node.js</li>
+				<li>- <a href="https://github.com/CheshireCatNick/cobinbot"><i class="fab fa-github"
+							aria-hidden="true"></i></a></li>
+			</ul>
+		</li></br>
 
-	<li><a href="./projects/dexon-rng/">DEXON RNG</a>
-		<ul><li>- Verifiable random number generator using DEXON blockchain</li>
-			<li>- HTML, javascript, bootstrap, web3.js</li>
-			<li>- <a href="https://github.com/CheshireCatNick/cheshirecatnick.github.io/tree/master/projects/dexon-rng"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li></br>
+		<li><a href="./projects/dexon-rng/">DEXON RNG</a>
+			<ul>
+				<li>- Verifiable random number generator using DEXON blockchain</li>
+				<li>- HTML, javascript, bootstrap, web3.js</li>
+				<li>- <a
+						href="https://github.com/CheshireCatNick/cheshirecatnick.github.io/tree/master/projects/dexon-rng"><i
+							class="fab fa-github" aria-hidden="true"></i></a></li>
+			</ul>
+		</li></br>
 
-	<li>Grid Master
-		<ul><li>- A backtesting tool for finding the best parameters for grid trading on <a href="https://www.pionex.com/">Pionex exchange</a></li>
-			<li>- Node.js</li>
-			<li>- <a href="https://github.com/CheshireCatNick/grid-master"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li></br>
+		<li>Grid Master
+			<ul>
+				<li>- A backtesting tool for finding the best parameters for grid trading on <a
+						href="https://www.pionex.com/">Pionex exchange</a></li>
+				<li>- Node.js</li>
+				<li>- <a href="https://github.com/CheshireCatNick/grid-master"><i class="fab fa-github"
+							aria-hidden="true"></i></a></li>
+			</ul>
+		</li></br>
 
-	<li>Code Exercise
-		<ul><li>- Solving problems on various online judges and contests.</li>
-			<li>- C, C++, javascript</li>
-			<li>- <a href="https://github.com/CheshireCatNick/code-exercise"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li><br/>
+		<li>Code Exercise
+			<ul>
+				<li>- Solving problems on various online judges and contests.</li>
+				<li>- C, C++, javascript</li>
+				<li>- <a href="https://github.com/CheshireCatNick/code-exercise"><i class="fab fa-github"
+							aria-hidden="true"></i></a></li>
+			</ul>
+		</li><br />
 
-	<li><a href="http://140.112.30.34:1234">Bomberman.io</a>
-		<ul><li>- Online bomberman game</li>
-			<li>- HTML, javascript, CSS, canvas, Node.js</li>
-			<li>- <a href="https://github.com/unchartedcake/bomberman.io"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li><br/>
+		<li><a href="http://140.112.30.34:1234">Bomberman.io</a>
+			<ul>
+				<li>- Online bomberman game</li>
+				<li>- HTML, javascript, CSS, canvas, Node.js</li>
+				<li>- <a href="https://github.com/unchartedcake/bomberman.io"><i class="fab fa-github"
+							aria-hidden="true"></i></a></li>
+			</ul>
+		</li><br />
 
-	<li>EasyChat
-		<ul><li>- GUI chatroom that can send file, img etc.</li>
-			<li>- Java, swing</li>
-			<li>- <a href="https://github.com/st945306/easyChat"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li><br/>
+		<li>EasyChat
+			<ul>
+				<li>- GUI chatroom that can send file, img etc.</li>
+				<li>- Java, swing</li>
+				<li>- <a href="https://github.com/st945306/easyChat"><i class="fab fa-github"
+							aria-hidden="true"></i></a></li>
+			</ul>
+		</li><br />
 
-	<li><a href="http://www.csie.ntu.edu.tw/~b02902055/myWebsite/vocab/vocab.html">Vocabuilder</a>
-		<ul><li>- Vocabulary builder that can use user-provided vocabulary</li>
-			<li>- HTML, CSS, javascript, json, java</li>
-			<li>- 	<a href="https://github.com/st945306/myWebsite/tree/master/vocab">
+		<li><a href="http://www.csie.ntu.edu.tw/~b02902055/myWebsite/vocab/vocab.html">Vocabuilder</a>
+			<ul>
+				<li>- Vocabulary builder that can use user-provided vocabulary</li>
+				<li>- HTML, CSS, javascript, json, java</li>
+				<li>- <a href="https://github.com/st945306/myWebsite/tree/master/vocab">
 						<i class="fab fa-github" aria-hidden="true"></i>
 					</a>
-			</li>
-		</ul>
-	</li><br/>
-	
-	<li>Auralizer
-		<ul><li>- Find appropriate music for your blog on YouTube</li>
-			<li>- C++, python</li>
-			<li>- <a href="https://github.com/Eug83/IR-final"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li><br/>
-	
-	<li>Lunch decider
-		<ul><li>- Smart app that can decide a proper restaurant for your next meal</li>
-			<li>- Android, java, XML</li>
-			<li>- <a href="https://github.com/st945306/Lunch-Decider"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li><br/>
-	
-	<li>HearthStone (terminal version)
-		<ul><li>- Terminal version of a famous online boardgame: HearthStone</li>
-			<li>- Java</li>
-		</ul>
-	</li><br/>
-	
-	<li>SDN compromised switch detector
-		<ul><li>- Detect malicious switch in a software-defined network</li>
-			<li>- Python, RYU</li>
-			<li>- 	<a href="https://github.com/st945306/SDN-compromised-switch-detector">
+				</li>
+			</ul>
+		</li><br />
+
+		<li>Auralizer
+			<ul>
+				<li>- Find appropriate music for your blog on YouTube</li>
+				<li>- C++, python</li>
+				<li>- <a href="https://github.com/Eug83/IR-final"><i class="fab fa-github" aria-hidden="true"></i></a>
+				</li>
+			</ul>
+		</li><br />
+
+		<li>Lunch decider
+			<ul>
+				<li>- Smart app that can decide a proper restaurant for your next meal</li>
+				<li>- Android, java, XML</li>
+				<li>- <a href="https://github.com/st945306/Lunch-Decider"><i class="fab fa-github"
+							aria-hidden="true"></i></a></li>
+			</ul>
+		</li><br />
+
+		<li>HearthStone (terminal version)
+			<ul>
+				<li>- Terminal version of a famous online boardgame: HearthStone</li>
+				<li>- Java</li>
+			</ul>
+		</li><br />
+
+		<li>SDN compromised switch detector
+			<ul>
+				<li>- Detect malicious switch in a software-defined network</li>
+				<li>- Python, RYU</li>
+				<li>- <a href="https://github.com/st945306/SDN-compromised-switch-detector">
 						<i class="fab fa-github" aria-hidden="true"></i>
 					</a>
-			</li>
-		</ul>
-	</li><br/>
-	
-	<li><a href="./pic/car.jpg">Self-driving car</a>
-		<ul><li>- Self-driven car with road detection and traffic light system</li>
-			<li>- Arduino, python</li>
-		</ul>
-	</li><br/>
-		
-	<li><a href="http://www.csie.ntu.edu.tw/~b02902055/myWebsite/">My website (old)</a>
-		<ul><li>- Last version of my personal website</li>
-			<li>- HTML, CSS, javascript, bootstrap</li>
-			<li>- <a href="https://github.com/st945306/myWebsite"><i class="fab fa-github" aria-hidden="true"></i></a></li>
-		</ul>
-	</li><br/>
-	
+				</li>
+			</ul>
+		</li><br />
+
+		<li><a href="./pic/car.jpg">Self-driving car</a>
+			<ul>
+				<li>- Self-driven car with road detection and traffic light system</li>
+				<li>- Arduino, python</li>
+			</ul>
+		</li><br />
+
+		<li><a href="http://www.csie.ntu.edu.tw/~b02902055/myWebsite/">My website (old)</a>
+			<ul>
+				<li>- Last version of my personal website</li>
+				<li>- HTML, CSS, javascript, bootstrap</li>
+				<li>- <a href="https://github.com/st945306/myWebsite"><i class="fab fa-github"
+							aria-hidden="true"></i></a></li>
+			</ul>
+		</li><br />
+
 	</ul>
 </body>
+
 </html>
