--- a/html/experience.html
+++ b/html/experience.html
@@ -1,69 +1,94 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 </head>
+
 <body>
-<h1>Experience</h1>
-<ul>
-	<li>Blockchain Researcher at <a href="https://dexon.org">DEXON Foundation</a> and <a href="https://cobinhood.com">COBINHOOD</a></li>
-		<ul><li>- Research in blockchain and design DEXON consensus algorithm:
-			<ul>
-				<li><a href="https://arxiv.org/abs/1811.07525">- <i>DEXON: A Highly Scalable, Decentralized DAG-Based Consensus Algorithm</i></a></li>
-				<li><a href="https://arxiv.org/abs/1907.03437">- <i>Fair Byzantine Agreements for Blockchains</i></a></li>
-				<li><a href="https://ieeexplore.ieee.org/document/9062491">- <i>Fair Byzantine Agreements for Blockchains (IEEE Access)</i></a></li>
-			</ul></li>
+	<h1>Experience</h1>
+	<ul>
+		<li>Senior Backend Engineer at <a href="https://www.onedegree.hk">OneDegree</a></li>
+		<ul>
+			<li>- Lead a team of 5 backend engineers that develop many core modules</li>
+			<li>- Develop accumulator (one of the most complicated component) in our insurance system (<a
+					href="https://www.onedegree.global">IXT</a>)</li>
+			<li>- Participate in developing 2 customer projects that go to production</li>
+			<li>- Tools: Python, SQLAlchemy, PostgreSQL, GitLab CI, Docker</li>
+		</ul>
+		<br />
+
+		<li>Blockchain Researcher at <a href="https://dexon.org">DEXON Foundation</a> and <a
+				href="https://cobinhood.com">COBINHOOD</a></li>
+		<ul>
+			<li>- Research in blockchain and design DEXON consensus algorithm:
+				<ul>
+					<li><a href="https://arxiv.org/abs/1811.07525">- <i>DEXON: A Highly Scalable, Decentralized
+								DAG-Based Consensus Algorithm</i></a></li>
+					<li><a href="https://arxiv.org/abs/1907.03437">- <i>Fair Byzantine Agreements for
+								Blockchains</i></a></li>
+					<li><a href="https://ieeexplore.ieee.org/document/9062491">- <i>Fair Byzantine Agreements for
+								Blockchains (IEEE Access)</i></a></li>
+				</ul>
+			</li>
 			<li>Develop a consensus simulator for testing/verifying the security of consensus algorithms</li>
 		</ul>
-	<br/>
+		<br />
 
-	<li>Bachelor and Master Degree in CSIE, NTU</li>
-	<br/>
+		<li>Bachelor and Master Degree in CSIE, NTU</li>
+		<br />
 
-	<li>Research in Network Security Lab
-		<ul><li>- Research in software-defined network, web API crawler, blockchain security, and consensus algorithms</li>
-			<li>- Publish and present a workshop 
-			<a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7502486&amp;searchWithin%3DSDN%26filter%3DAND%28p_IS_Number%3A7502392%29%26pageNumber%3D3">
-				paper</a> in 
-				<a href="http://sites.ieee.org/netsoft/">NetSoft</a>
-				conference 2016</li>
-			<li>- Master Thesis: A Security Simulator and Evaluation for Voting-Based Consensus Algorithms</li>
-		</ul>
-	</li>
-	<br/>
+		<li>Research in Network Security Lab
+			<ul>
+				<li>- Research in software-defined network, web API crawler, blockchain security, and consensus
+					algorithms</li>
+				<li>- Publish and present a workshop
+					<a
+						href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7502486&amp;searchWithin%3DSDN%26filter%3DAND%28p_IS_Number%3A7502392%29%26pageNumber%3D3">
+						paper</a> in
+					<a href="http://sites.ieee.org/netsoft/">NetSoft</a>
+					conference 2016
+				</li>
+				<li>- Master Thesis: A Security Simulator and Evaluation for Voting-Based Consensus Algorithms</li>
+			</ul>
+		</li>
+		<br />
 
-	<li>Part-time Software Engineer at ITRI
-		<ul>
-			<li>- Develop innovative services, including a parking/delivering app and a trading bot platform, 
-				which becomes <a href="https://crypto-arsenal.io/">Crypto Arsenal</a></li>
-			<li>- Develop websites, back-end server and Android apps using Java, Node.js and MongoDB</li>
-		</ul>
-	</li>
-	<br/>
+		<li>Part-time Software Engineer at ITRI
+			<ul>
+				<li>- Develop innovative services, including a parking/delivering app and a trading bot platform,
+					which becomes <a href="https://crypto-arsenal.io/">Crypto Arsenal</a></li>
+				<li>- Develop websites, back-end server and Android apps using Java, Node.js and MongoDB</li>
+			</ul>
+		</li>
+		<br />
 
-	<li>Network Administrator and System Administrator in CSIE, NTU
-		<ul>
-			<li>- Team leader of the firewall team, responsible for configuring and maintaining the firewall</li>
-			<li>- Team member of the personal computer team, responsible for maintaining
-				and upgrading systems and software of classroom computers</li>
-		</ul>
-	</li>
-	<br/>
+		<li>Network Administrator and System Administrator in CSIE, NTU
+			<ul>
+				<li>- Team leader of the firewall team, responsible for configuring and maintaining the firewall</li>
+				<li>- Team member of the personal computer team, responsible for maintaining
+					and upgrading systems and software of classroom computers</li>
+			</ul>
+		</li>
+		<br />
 
-	<li>Teaching Assistant in CSIE, NTU
-		<ul><li>- Cryptography and Network Security</li>
-			<li>- Network Administration and System Administration</li>
-		</ul>
-	</li>
-	<br/>
-	
-	<li>Team Member of <a href="https://sites.google.com/site/nturobopalspl/">NTU RoboPAL</a>
-		<ul><li>- Attend RoboCup 2016 and 2017</li>
-			<li>- Rank top 4 in outdoor competition and top 12 in indoor competition in RoboCup 2016</li>
-			<li>- Study robot balancing, kicking, sound localization, and strategy adjustment</li>
-			<li>- Learn how to work on a big project and version control</li>
-		</ul>
-	</li>
-	<br/>
-</ul>
+		<li>Teaching Assistant in CSIE, NTU
+			<ul>
+				<li>- Cryptography and Network Security</li>
+				<li>- Network Administration and System Administration</li>
+			</ul>
+		</li>
+		<br />
+
+		<li>Team Member of <a href="https://sites.google.com/site/nturobopalspl/">NTU RoboPAL</a>
+			<ul>
+				<li>- Attend RoboCup 2016 and 2017</li>
+				<li>- Rank top 4 in outdoor competition and top 12 in indoor competition in RoboCup 2016</li>
+				<li>- Study robot balancing, kicking, sound localization, and strategy adjustment</li>
+				<li>- Learn how to work on a big project and version control</li>
+			</ul>
+		</li>
+		<br />
+	</ul>
 </body>
+
 </html>
