--- a/html/experience.html
+++ b/html/experience.html
@@ -30,7 +30,7 @@
 								Blockchains (IEEE Access)</i></a></li>
 				</ul>
 			</li>
-			<li>Develop a consensus simulator for testing/verifying the security of consensus algorithms</li>
+			<li>- Develop a consensus simulator for testing/verifying the security of consensus algorithms</li>
 		</ul>
 		<br />
 
